<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format4.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>my_ros2_node</name>
  <version>0.1.0</version>
  <description>ROS 2 node with publisher, subscriber, service client, and service server.</description>
  <maintainer email="dingsong1@example.com">dingsong</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_gmock</buildtool_depend>
  <buildtool_depend>ament_cmake_gtest</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>example_interfaces</depend>

  <test_depend>ament_cmake_gmock</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>

  <!-- Uncomment this if you have additional run dependencies -->
  <!-- <exec_depend>other_dependency</exec_depend> -->
</package>

